--- a/site/package.json
+++ b/site/package.json
@@ -5,7 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development gulp",
-    "build": "cross-env NODE_ENV=production gulp build"
+    "build": "cross-env NODE_ENV=production gulp build",
+    "eslint": "eslint src",
+    "eslint:fix": "eslint src --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run eslint && npm run stylelint",
+      "pre-push": "npm run eslint:fix && npm run stylelint:fix"
+    }
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +26,7 @@
     "browser-sync": "^2.29.1",
     "cross-env": "^7.0.3",
     "cssnano": "^6.0.0",
+    "eslint": "^8.39.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-postcss": "^9.0.1",
@@ -26,6 +35,9 @@
     "gulp-sourcemaps": "^3.0.0",
     "postcss": "^8.4.21",
     "sass": "^1.60.0",
+    "stylelint": "^15.6.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-scss": "^4.6.0",
     "webpack": "^5.79.0",
     "webpack-stream": "^7.0.0"
   },
