--- a/crm/package.json
+++ b/crm/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.5",
+    "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0"
   }
 }
