--- a/crm/package.json
+++ b/crm/package.json
@@ -13,8 +13,10 @@
     "antd": "^5.4.5",
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "@types/react-highlight-words": "^0.16.4"
   }
 }
